version/0.18/_sources/api/solver/_autosummary/settings/droplet_particle.rst.txt
:orphan:

.. _droplet_particle:

droplet_particle
================

.. autoclass:: ansys.fluent.core.solver.settings_232.droplet_particle.droplet_particle
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`droplet_particle_child <droplet_particle_child>`


.. rubric:: Included in:

============================   ======================

Parent                                        Summary

============================   ======================
:ref:`materials <materials>`       'materials' child.

============================   ======================

